Fixed cookies and added basic visual alignment

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,8 @@ body {
   background-color: #f8f8f8;
   color: #444444;
   margin: 0;
+  display: flex;
+  justify-content: center;
   font-family: proxima-nova,
     sans-serif;
   -webkit-font-smoothing: antialiased;
